[project]
name = "rivetcalc-replit"
version = "0.1.0"
description = "rivtcalc toml file for repl.it"
authors = [
    "Rod Holland <rholland@structurelabs.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.7"

[tool]
[tool.poetry]
description = "rivtcalc toml file for repl.it"
license = "MIT"
name = "rivtcalc-replit"
readme = "README.md"
version = "0.1.0"
authors = ["rholland <rholland@structurelabs.com>"]
[tool.poetry.dependencies.rivtcalc]
git = "https://github.com/rivtcalc/rivtcalc-terminal"

