[project]
description = "toml file for repl.it"
license = "MIT"
name = "rivtcalc-replit"
readme = "README.md"

[tool]
[tool.poetry]
description = "rivtcalc toml file for repl.it"
license = "MIT"
name = "rivtcalc-replit"
readme = "README.md"
version = "0.1.0"
authors = ["rholland <rholland@structurelabs.com>"]
[tool.poetry.dependencies.rivtcalc]
git = "https://github.com/rivtcalc/rivtcalc-terminal"
